--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ appcompat = "1.7.1"
 material = "1.12.0"
 koin = "4.1.0"
 room = "2.7.2"
+composeNavigation = "2.9.3"
+ksp = "2.2.0-2.0.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -33,11 +35,14 @@ material = { group = "com.google.android.material", name = "material", version.r
 koin = { group = "io.insert-koin", name = "koin-core", version.ref = "koin"}
 koinAndroid = {group = "io.insert-koin", name = "koin-android", version.ref = "koin"}
 koinCompose = {group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin"}
-room = {group = "androidx.room", name = "room-runtime", version.ref = "room"}
+composeNavigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "composeNavigation"}
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
-
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
